k8s/infra/002-postgresql.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: databases
