k8s/infra/100-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox
  labels:
    istio-injection: 'enabled'
    sandbox-apps: 'true'
