k8s/infra/010-opendj.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opendj
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: opendj
  name: opendj-service
  namespace: opendj
spec:
  clusterIP: None
  ports:
  - port: 1389
    name: ldap
  - port: 1636
    name: ldaps
  - port: 4444
    name: admin
  selector:
    app: opendj
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: opendj
  namespace: opendj
  labels:
    app: opendj
spec:
  serviceName: opendj
  replicas: 1
  selector:
    matchLabels:
      app: opendj
  template:
    metadata:
      labels:
        app: opendj
    spec:
      containers:
      - name: opendj
        image: openidentityplatform/opendj:4.6.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 1389
          protocol: TCP
        - containerPort: 1636
          protocol: TCP
        - containerPort: 4444
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: opendj-data
          mountPath: /opt/opendj/data
        - name: artemis-import
          mountPath: /opt/opendj/artemis-import
          readOnly: true
        lifecycle:
          postStart:
            exec:
              command: ["/opt/opendj/artemis-import/init.sh"]
      volumes:
        - name: artemis-import
          configMap:
            name: artemis-import
            items:
              - key: 'init.ldif'
                path: 'init.ldif'
              - key: 'init.sh'
                path: 'init.sh'
                mode: 0755
  volumeClaimTemplates:
  - metadata:
      name: opendj-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 200Mi
